[gd_scene load_steps=5 format=3 uid="uid://baplrbfijjqwf"]

[ext_resource type="Script" path="res://Scripts/Furniture.gd" id="1_1hnt2"]
[ext_resource type="SpriteFrames" uid="uid://b7usa7wenv7im" path="res://Scenes/InteriorElements/PicsInterior/bedears.tres" id="1_widmh"]
[ext_resource type="Texture2D" uid="uid://bqxp6q6pxddqu" path="res://Assets/Interior/Цветное/Крытая лежанка 2 снаружи.png" id="2_t887x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xdsqv"]
radius = 112.285

[node name="BedEars" type="Node2D"]
script = ExtResource("1_1hnt2")
Type = 6

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -51)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("1_widmh")

[node name="FurnitureArea" type="Area2D" parent="."]
process_mode = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FurnitureArea"]
process_mode = 3
shape = SubResource("CircleShape2D_xdsqv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -52)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_t887x")

[connection signal="area_entered" from="FurnitureArea" to="." method="_on_furniture_area_area_entered"]
[connection signal="body_entered" from="FurnitureArea" to="." method="_on_furniture_area_body_entered"]
[connection signal="body_exited" from="FurnitureArea" to="." method="_on_furniture_area_body_exited"]
[connection signal="child_entered_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_entered_tree"]
[connection signal="child_exiting_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_exiting_tree"]
