[gd_scene load_steps=5 format=3 uid="uid://wuixjkevs8xv"]

[ext_resource type="SpriteFrames" uid="uid://6s14skwsiiik" path="res://Scenes/InteriorElements/PicsInterior/chairears.tres" id="1_10ni7"]
[ext_resource type="Script" path="res://Scripts/Furniture.gd" id="1_68aws"]
[ext_resource type="Texture2D" uid="uid://g1ng5k3rcwii" path="res://Assets/Interior/Цветное/Кресло с ушками ручка.png" id="2_0luu4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xocof"]
radius = 112.285

[node name="ChairEars" type="Node2D"]
script = ExtResource("1_68aws")
Type = 4

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(91, -176)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("1_10ni7")

[node name="FurnitureArea" type="Area2D" parent="."]
process_mode = 3
position = Vector2(-51, -134)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FurnitureArea"]
process_mode = 3
shape = SubResource("CircleShape2D_xocof")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(91, -172)
scale = Vector2(0.681966, 0.681966)
texture = ExtResource("2_0luu4")

[connection signal="area_entered" from="FurnitureArea" to="." method="_on_furniture_area_area_entered"]
[connection signal="body_entered" from="FurnitureArea" to="." method="_on_furniture_area_body_entered"]
[connection signal="body_exited" from="FurnitureArea" to="." method="_on_furniture_area_body_exited"]
[connection signal="child_entered_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_entered_tree"]
[connection signal="child_exiting_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_exiting_tree"]
