[gd_scene load_steps=4 format=3 uid="uid://symkv2enhq00"]

[ext_resource type="SpriteFrames" uid="uid://bsrtexng2cbog" path="res://Scenes/InteriorElements/PicsInterior/puffears.tres" id="1_2f558"]
[ext_resource type="Script" path="res://Scripts/Furniture.gd" id="1_85a16"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ee1vf"]
radius = 140.228

[node name="PuffEars" type="Node2D"]
script = ExtResource("1_85a16")
Type = 8

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -85)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("1_2f558")

[node name="FurnitureArea" type="Area2D" parent="."]
process_mode = 3
position = Vector2(21, -125)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FurnitureArea"]
process_mode = 3
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_ee1vf")

[connection signal="area_entered" from="FurnitureArea" to="." method="_on_furniture_area_area_entered"]
[connection signal="body_entered" from="FurnitureArea" to="." method="_on_furniture_area_body_entered"]
[connection signal="body_exited" from="FurnitureArea" to="." method="_on_furniture_area_body_exited"]
[connection signal="child_entered_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_entered_tree"]
[connection signal="child_exiting_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_exiting_tree"]
