[gd_scene load_steps=3 format=3 uid="uid://j03mldx0hroa"]

[ext_resource type="Script" path="res://Scripts/Furniture.gd" id="1_wvo2x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sj7o2"]
radius = 112.285

[node name="Furniture" type="Node2D"]
script = ExtResource("1_wvo2x")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="FurnitureArea" type="Area2D" parent="."]
process_mode = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FurnitureArea"]
process_mode = 3
shape = SubResource("CircleShape2D_sj7o2")

[connection signal="area_entered" from="FurnitureArea" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="FurnitureArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="FurnitureArea" to="." method="_on_furniture_area_body_exited"]
[connection signal="child_entered_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_entered_tree"]
[connection signal="child_exiting_tree" from="FurnitureArea" to="." method="_on_furniture_area_child_exiting_tree"]
